remove instant, add maven